--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
@@ -33,21 +33,21 @@
             <!--功能按钮区-->
             <el-row class="el-row-h50">
                 <el-col :span="4">
-                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditGuest(0)">新增机构列表</el-button>
+                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditCoper(0)">新增机构列表</el-button>
                 </el-col>
             </el-row>
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="meetingCooperationId" label="所属会议编号" width=""></el-table-column>
+                    <el-table-column prop="meetingCooperationMeetingId" label="所属会议编号" width=""></el-table-column>
                     <el-table-column prop="meetingCooperationCrtUserId" label="创建人Id" width="90"></el-table-column>
                     <el-table-column prop="meetingCooperationCrtTime" label="创建时间" width="200"></el-table-column>
                     <el-table-column prop="meetingCooperationModUserId" label="更新人Id" width="90"></el-table-column>
                     <el-table-column prop="meetingCooperationModTime" label="更新时间" width="200"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
-                            <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
+                            <el-button type="text" size="small" @click="addOrEditCoper(1,scope.row)">修改</el-button>
+                            <el-button type="text" size="small" @click="deleteThisCoper(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -77,7 +77,7 @@
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchForm.meetingCooperationMeetingId"
+                                v-model="meetingCopForm.meetingCooperationMeetingId"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
@@ -106,7 +106,7 @@
                         <!--二级标题开始-->
                         <div v-for="(item2,index2) in item.children">
                             <el-row class="el-row-h60">
-                                <el-col :span="16" :offset="1">
+                                <el-col :span="15" :offset="2">
                                     <el-form-item label="二级标题" style="margin:0;">
                                         <el-input
                                         clearable
@@ -140,7 +140,7 @@
 
                     <el-row style="margin-top: 15px;">
                         <el-col class="el-row-h40" :span="24">
-                            <el-button type="primary" style="width:100%" @click="addCopLv1()">添加一级标题</el-button>
+                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="addCopLv1()">添加一级标题</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
@@ -151,7 +151,7 @@
                     <el-button type="primary" style="width:100%" @click="submitCreatEdit('meetingCopForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('meetingCopForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeCreatOrEdit('meetingCopForm')">取消</el-button>
                 </el-col>
             </el-row>
 
@@ -219,7 +219,8 @@
 
     </div>
 </body>
-
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.min.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.base64.js"></script>
 
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/meeting_institution.js"></script>
@@ -233,7 +234,7 @@
     color: rgb(214, 32, 8)!important;
 }
 .logo_list{
-    padding:0 0 0 14%;
+    padding:0 0 0 18%;
 }
 .logo_list_item{
     display: block;
