提交代码   新增机构列表

--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -109,7 +109,7 @@
                                             style="width:100%;"
                                             v-model="item.timeValue"
                                             type="date"
-                                            value-format="d"
+                                            value-format="M-dd"
                                             placeholder="选择日期">
                                         </el-date-picker>
                                     </el-form-item>
