--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
@@ -157,20 +157,20 @@
 
 
             <!--自媒体图库弹出层开始-->
-            <el-dialog title="机构自媒体图库" :visible.sync="showMeidaLibDialog" width="100%" :fullscreen="true" :show-close="false">
-                <el-form :model="searchSelfmediaimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right"  >
+            <el-dialog title="机构列表" :visible.sync="showMeidaLibDialog" width="100%" :fullscreen="true" :show-close="false">
+                <el-form :model="searchCoperForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right"  >
                     <el-row class="el-row-h60">
                         <el-col :span="12">
-                            <el-form-item label="图片名称" style="margin:0;">
+                            <el-form-item label="机构名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchSelfmediaimgForm.picTitle"
+                                v-model="searchCoperForm.cooperationName"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchSelfmediaImg(0)">搜索</el-button>
+                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoper(0)">搜索</el-button>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
                             <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="batchAddLogo">批量添加</el-button>
@@ -180,22 +180,22 @@
                         </el-col>
                     </el-row>
                 </el-form>
-                <el-table :data="selfmediaimgTableData" max-height="450" style="width: 100%; margin:10px auto;" @selection-change="handleSelectionChange"  ref="multipleTable" stripe>
+                <el-table :data="coperTableData" max-height="450" style="width: 100%; margin:10px auto;" @selection-change="handleSelectionChange"  ref="multipleTable" stripe>
                     <el-table-column
                         type="selection"
                         width="55">
                     </el-table-column>
-                    <el-table-column prop="picUrl" label="图片预览" width="180">
-                        <template v-if="scope.row.picUrl" slot-scope="scope">
-                            <img style="width:80px;height:60px;" :src="scope.row.picUrl">
+                    <el-table-column prop="cooperationName" label="机构名称" width=""></el-table-column>
+                    <el-table-column prop="cooperationImg" label="机构Logo" width="170">
+                        <template v-if="scope.row.cooperationImg" slot-scope="scope">
+                            <img style="width:150px;height:45px;" :src="scope.row.cooperationImg">
                         </template>
                     </el-table-column>
-                    <el-table-column prop="picTitle" label="图片名称" width="250"></el-table-column>
-                    <el-table-column prop="picEditorName" label="修改人" width="120"></el-table-column>
-                    <el-table-column prop="picModTime" label="最后更新时间"></el-table-column>
+                    <el-table-column prop="cooperationCrtUserName" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="cooperationCrtTime" label="创建时间" width="160"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addThisImg(scope.row)">添加</el-button>
+                            <el-button type="text" size="small" @click="addThisCoper(scope.row)">添加</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
