--- a/webapps/ROOT/WEB-INF/classes/templates/modules/advertisement/advertisement_position.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/advertisement/advertisement_position.html
@@ -359,7 +359,7 @@
                                 maxlength="100"
                                 clearable
                                 type="text"
-                                placeholder="原文章链接"
+                                placeholder="如果无链接请填#"
                                 v-model="advItemForm.focusUrl"
                                 auto-complete="off">
                                 </el-input>
