--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/selfmedia_contribute.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/selfmedia_contribute.html
@@ -41,7 +41,7 @@
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" style="width:100%" icon="el-icon-search" @click="startSearch">搜索</el-button>
+                            <el-button type="primary" style="width:100%" icon="el-icon-search" @click="startSearch(0)">搜索</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
