--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -109,7 +109,7 @@
                                             style="width:100%;"
                                             v-model="item.timeValue"
                                             type="date"
-                                            value-format="M-dd"
+                                            value-format="timestamp"
                                             placeholder="选择日期">
                                         </el-date-picker>
                                     </el-form-item>
@@ -182,6 +182,7 @@
                                                         arrow-control
                                                         v-model="item4.timeRange"
                                                         range-separator="-"
+                                                        value-format="timestamp"
                                                         start-placeholder="开始时间"
                                                         end-placeholder="结束时间"
                                                         placeholder="选择时间范围">
